--- a/trunk/linux/Makefile
+++ b/trunk/linux/Makefile
@@ -8,7 +8,7 @@ CC=gcc
 LD=$(CC)
 INCLUDES= -I../common
 CFLAGS= -g -O2 -Wall -Werror $(INCLUDES)
-LDFLAGS= -lX11 -lXtst -lcurses
+LDFLAGS= -lX11 -lXtst
 
 
 OBJS = \
@@ -23,7 +23,7 @@ $(APPNAME):  $(OBJS)
 rebuild: clean depend all
 
 depend:
-	makedepend $(OBJS:.o=.c)
+	makedepend $(OBJS:.o=.c) $(INCLUDES)
 
 .c.o :
 	$(CC) $(CFLAGS) -c $*.c -o $@
@@ -34,7 +34,6 @@ clean:
 
 # DO NOT DELETE
 
-itp-server.o: /usr/include/curses.h /usr/include/ncurses_dll.h
 itp-server.o: /usr/include/stdio.h /usr/include/features.h
 itp-server.o: /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h
 itp-server.o: /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h
@@ -42,17 +41,17 @@ itp-server.o: /usr/include/bits/types.h /usr/include/bits/typesizes.h
 itp-server.o: /usr/include/libio.h /usr/include/_G_config.h
 itp-server.o: /usr/include/wchar.h /usr/include/bits/wchar.h
 itp-server.o: /usr/include/gconv.h /usr/include/bits/stdio_lim.h
-itp-server.o: /usr/include/bits/sys_errlist.h /usr/include/unctrl.h
-itp-server.o: /usr/include/stdlib.h /usr/include/sys/types.h
-itp-server.o: /usr/include/time.h /usr/include/endian.h
-itp-server.o: /usr/include/bits/endian.h /usr/include/sys/select.h
-itp-server.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
-itp-server.o: /usr/include/bits/time.h /usr/include/sys/sysmacros.h
-itp-server.o: /usr/include/bits/pthreadtypes.h /usr/include/alloca.h
-itp-server.o: /usr/include/string.h /usr/include/X11/Xlib.h
-itp-server.o: /usr/include/X11/X.h /usr/include/X11/Xfuncproto.h
-itp-server.o: /usr/include/X11/Xosdefs.h /usr/include/X11/Xutil.h
-itp-server.o: /usr/include/X11/keysym.h /usr/include/X11/keysymdef.h
+itp-server.o: /usr/include/bits/sys_errlist.h /usr/include/stdlib.h
+itp-server.o: /usr/include/sys/types.h /usr/include/time.h
+itp-server.o: /usr/include/endian.h /usr/include/bits/endian.h
+itp-server.o: /usr/include/sys/select.h /usr/include/bits/select.h
+itp-server.o: /usr/include/bits/sigset.h /usr/include/bits/time.h
+itp-server.o: /usr/include/sys/sysmacros.h /usr/include/bits/pthreadtypes.h
+itp-server.o: /usr/include/alloca.h /usr/include/string.h
+itp-server.o: /usr/include/X11/Xlib.h /usr/include/X11/X.h
+itp-server.o: /usr/include/X11/Xfuncproto.h /usr/include/X11/Xosdefs.h
+itp-server.o: /usr/include/X11/Xutil.h /usr/include/X11/keysym.h
+itp-server.o: /usr/include/X11/keysymdef.h
 itp-server.o: /usr/include/X11/extensions/XTest.h
 itp-server.o: /usr/include/X11/extensions/XInput.h
 itp-server.o: /usr/include/X11/extensions/XI.h /usr/include/sys/socket.h
