Use viewcontroller like I meant to all along...
5 second timeout on the connection attempt, so it still feels 'snappy' even when the server is not responding... if it's taking > 5 seconds we probably don't wanna stream mouse data anyway.

handles hostnames as well as ip. dns should be fine as well.

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -66,3 +66,4 @@ itp-server.o: /usr/include/bits/in.h /usr/include/bits/byteswap.h
 itp-server.o: /usr/include/rpc/netdb.h /usr/include/bits/netdb.h
 itp-server.o: /usr/include/unistd.h /usr/include/bits/posix_opt.h
 itp-server.o: /usr/include/bits/confname.h /usr/include/getopt.h
+itp-server.o: ../common/mouseevent.h
