Added functionality for keyboard support.  Network code should handle passing keys through it... linux server supports it and mac server hopefully does as well (pending testing, I don't have a mac :().
Windows server modified to reflect the change from 'mouseevents' to 'inputevent' althuogh it's still somewhat broken.

Added test client to send the appropriate messages to the server to type out "hello world", called itp-client-helloworld

--- a/macosx/Makefile
+++ b/macosx/Makefile
@@ -31,5 +31,5 @@ depend:
 clean:
 	-$(RM) -f $(APPNAME) *.o
 
-itp-server-mac.o: ../common/mouseevent.h
+itp-server-mac.o: ../common/inputevent.h
 # DO NOT DELETE
